# FractalsDiscovery

./: .gitignore  CMakeLists.txt  Doxyfile  Fractals.pro  FractalsDiscovery.pro  README.md  attracthenon.cpp  attracthenon.h  attractikeda.cpp  attractikeda.h  attractors.cpp  attractors.h  fractaltypes.cpp  fractaltypes.h  fractaltypesdlg.ui  fractimage.h  juliacosh.cpp  juliacosh.h  juliaexp.cpp  juliaexp.h  juliafractalparams.cpp  juliafractalparams.h  juliafractalparams.ui  juliapower4.cpp  juliapower4.h  juliaset.cpp  juliaset.h  juliasquared.cpp  juliasquared.h  lyapfractalparams.h  lyapfractalparams.ui  lyapset.cpp  lyapset.h  lyapunov.h  main.cpp  mainfractals.cpp  mainfractals.h  mainfractals.ui  mainwindow.cpp  mandelbrot.cpp  (+2 more)
.github/workflows/: build.yml
creators/: CMakeLists.txt  bifurcation.cpp  bifurcation.h  bifurset.cpp  bifurset.h  fractimage.cpp  fractimage.h  juliacosh.cpp  juliacosh.h  juliaexp.cpp  juliaexp.h  juliapower4.cpp  juliapower4.h  juliaset.cpp  juliaset.h  juliasquared.cpp  juliasquared.h  lyapset.cpp  lyapset.h  lyapunov.cpp  lyapunov.h  mandelbrot.cpp  mandelbrot.h  mandelbrotset.cpp  mandelbrotset.h  unilyaplike.h  unipisin.cpp  unisin.cpp  unisin.h  unixcubed.cpp  unixquater.cpp
creators/experiments/bifurcation/: bifurcation.cpp  bifurcation.h  bifurset.cpp
creators/experiments/universality/: uni1minussquare.cpp  uni1minussquare.h  unilyaplike.cpp  unipisin.h  unisin.cpp  unitent.cpp  unitent.h  unixcubed.h  unixquater.h
gui/: CMakeLists.txt  bifurfractalparams.cpp  bifurfractalparams.h  bifurfractals_ui.h  fractaltypes.cpp  fractaltypes.h  fractaltypesdlg_ui.h  juliacoshfractalparams.cpp  juliacoshfractalparams.h  juliacoshfractals_ui.h  juliaexpfractalparams.cpp  juliaexpfractalparams.h  juliaexpfractals_ui.h  juliafractalparams.cpp  juliapower4fractalparams.cpp  juliapower4fractalparams.h  juliapower4fractals_ui.h  juliasquaredfractalparams.cpp  juliasquaredfractalparams.h  juliasquaredfractals_ui.h  lyapfractalparams.cpp  lyapfractals_ui.h  main.cpp  main_ui.h  mainfractals.cpp  mainfractals.h  mainfractals.ui  mainfractals_ui.h  mandelbrotfractalparams.cpp  mandelbrotfractalparams.h  mandelbrotfractals_ui.h  paintscene.cpp  paintview.cpp  paintview.h  paramUi_juliafractal.h
gui/experiments/: bifurfractalparams.h
main/: CMakeLists.txt  main_ui.h  mainfractals.cpp  mainfractals_ui.h
renderings/bifurcation/: Bifurcation1.xml  Bifurcation2.xml  Bifurcation3.xml  Bifurcation4.xml  Bifurcation5.xml  Bifurcation6.xml
renderings/universality/: Uni1MinusSquare1.xml  UniLyapLike1.xml  UniPiSin1.xml  UniSin1.xml  UniSin2.xml  UniTent1.xml  UniTent2.xml  UniTent3.xml  UniXCubed1.xml  UniXQuater1.xml
